--- a/demo/dev.html
+++ b/demo/dev.html
@@ -9,7 +9,8 @@
   <body>
     <div>
       <public-choice>
-        <datalist>
+        <span slot="question">What is your favorite pronoun?</span>
+        <datalist slot="options">
           <option value="He"></option>
           <option value="She"></option>
           <option value="They"></option>
