--- a/demo/dev.html
+++ b/demo/dev.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div>
-      <public-choice>
+      <public-choice guid="951c3b69-3e16-4f62-915b-ba3ca33a8e77">
         <span slot="question">What is your favorite pronoun?</span>
         <datalist slot="options">
           <option value="He"></option>
