--- a/demo/dev.html
+++ b/demo/dev.html
@@ -19,6 +19,27 @@
           <option value="No pronoun preference"></option>
         </datalist>
       </public-choice>
+
+      <public-choice guid="0a924568-fcb7-4387-ae85-91a6fa41f788">
+          <span slot="question">Do you approve of this poll?</span>
+          <datalist slot="options">
+            <option value="Yes"></option>
+            <option value="No"></option>
+            <option value="Maybe"></option>
+            
+          </datalist>        
+      </public-choice>
+
+
+      <public-choice guid="d1b5f984-9216-4076-8ba1-36ad54edbc06">
+          <span slot="question">Do you look more like your?</span>
+          <datalist slot="options">
+            <option value="Mother"></option>
+            <option value="Father"></option>
+            <option value="Neither"></option>
+            
+          </datalist>        
+      </public-choice>
       <script type="module" src="../public-choice.js"></script>
     </div>
   </body>
