--- a/demo/dev.html
+++ b/demo/dev.html
@@ -43,4 +43,9 @@
       <script type="module" src="../public-choice.js"></script>
     </div>
   </body>
+  <script>
+    window.addEventListener('idb-item-set', e =>{
+      console.log(e);
+    })
+  </script>
 </html>
