--- a/demo/index.html
+++ b/demo/index.html
@@ -1,18 +1,12 @@
-
-[![Published on webcomponents.org](https://img.shields.io/badge/webcomponents.org-published-blue.svg)](https://www.webcomponents.org/element/public-choice)
-
-<a href="https://nodei.co/npm/public-choice/"><img src="https://nodei.co/npm/public-choice.png"></a>
-
-<img src="https://badgen.net/bundlephobia/minzip/public-choice">
-
-# public-choice Web Component
-
-Preliminary public polling web component.  Do Not Use In Production.
-
-<!--
-```
-<custom-element-demo>
-<template>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
+  <body>
     <div>
       <public-choice guid="951c3b69-3e16-4f62-915b-ba3ca33a8e77">
         <span slot="question">What is your favorite pronoun?</span>
@@ -48,10 +42,6 @@ Preliminary public polling web component.  Do Not Use In Production.
       </public-choice>
       <script type="module" src="https://unpkg.com/public-choice@0.0.1/public-choice.js?module"></script>
     </div>
-</template>
-</custom-element-demo>
-```
--->
-
-
-
+  </body>
+  
+</html>
