--- a/demo/dev.html
+++ b/demo/dev.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div>
+      <xtal-sip><script nomodule>["public-choice"]</script></xtal-sip>
+      
       <public-choice guid="951c3b69-3e16-4f62-915b-ba3ca33a8e77">
         <span slot="question">What is your favorite pronoun?</span>
         <datalist slot="options">
@@ -40,7 +42,50 @@
             
           </datalist>        
       </public-choice>
-      <script type="module" src="../public-choice.js"></script>
+      <script defer src="https://cdn.jsdelivr.net/npm/es-module-shims@0.2.7/dist/es-module-shims.js"></script>
+      <!-- <script type="importmap-shim">
+      {
+          "imports": {
+              "xtal-element/": "../node_modules/xtal-element/",
+              "trans-render/": "../node_modules/trans-render/",
+              "purr-sist-idb": "../node_modules/purr-sist/purr-sist-idb.js",
+              "purr-sist-myjson": "../node_modules/purr-sist/purr-sist-myson.js",
+              "xtal-sip": "../node_modules/xtal-sip/xtal-sip.js",
+              "public-choice": "../public-choice.js",
+              "p-d": "../node_modules/p-et-alia/p-d.js",
+              "p-d-x": "../node_modules/p-et-alia/p-d-x.js",
+              "if-diff": "../node_modules/if-diff/if-diff.js",
+              "xtal-radio-group-md": "../node_modules/xtal-material/xtal-radio-group-md.js"
+
+          }
+      }
+      </script> -->
+      <script type="importmap-shim">
+        {
+            "imports": {
+                "trans-render/": "../node_modules/trans-render/",
+                "xtal-element/": "../node_modules/xtal-element/",
+                "event-switch/": "../node_modules/event-switch/",
+                "idb-keyval/": "../node_modules/idb-keyval/",
+                "xtal-sip": "../node_modules/xtal-sip/xtal-sip.js",
+                "public-choice": "../public-choice.js",
+                "purr-sist-idb": "../node_modules/purr-sist/purr-sist-idb.js",
+                "purr-sist-myjson": "../node_modules/purr-sist/purr-sist-myjson.js",
+                "p-d": "../node_modules/p-et-alia/p-d.js",
+                "p-et-alia/": "../node_modules/p-et-alia/",
+                "if-diff": "../node_modules/if-diff/if-diff.js",
+                "xtal-radio-group-md": "../node_modules/xtal-material/xtal-radio-group-md.js",
+                "google-chart":  "../node_modules/@google-web-components/google-chart/google-chart.js",
+                "@polymer/iron-ajax/": "../node_modules/@polymer/iron-ajax/",
+                "@polymer/polymer/": "../node_modules/@polymer/polymer/",
+                "@webcomponents/": "../node_modules/@webcomponents/",
+                "p-d-x-slot-bot": "../slot-bot.js"
+            }
+        }
+        </script>
+      <script  type="module-shim">
+          import 'xtal-sip';
+      </script>
     </div>
   </body>
   <script>
@@ -48,4 +93,5 @@
       console.log(e);
     })
   </script>
+
 </html>
