--- a/demo/dev.html
+++ b/demo/dev.html
@@ -79,6 +79,7 @@
                 "@polymer/iron-ajax/": "../node_modules/@polymer/iron-ajax/",
                 "@polymer/polymer/": "../node_modules/@polymer/polymer/",
                 "@webcomponents/": "../node_modules/@webcomponents/",
+                "slot-bot/": "../node_modules/slot-bot/",
                 "p-d-x-slot-bot": "../slot-bot.js"
             }
         }
