--- a/demo/dev.html
+++ b/demo/dev.html
@@ -76,6 +76,8 @@
                 "if-diff": "../node_modules/if-diff/if-diff.js",
                 "xtal-radio-group-md": "../node_modules/xtal-radio-group-md/xtal-radio-group-md.js",
                 "google-chart":  "../node_modules/@google-web-components/google-chart/google-chart.js",
+                "xtal-frappe-chart/": "../node_modules/xtal-frappe-chart/",
+                "frappe-charts/": "../node_modules/frappe-charts/",
                 "@polymer/iron-ajax/": "../node_modules/@polymer/iron-ajax/",
                 "@polymer/polymer/": "../node_modules/@polymer/polymer/",
                 "@webcomponents/": "../node_modules/@webcomponents/",
