--- a/demo/dev.html
+++ b/demo/dev.html
@@ -43,23 +43,6 @@
           </datalist>        
       </public-choice>
       <script defer src="https://cdn.jsdelivr.net/npm/es-module-shims@0.2.7/dist/es-module-shims.js"></script>
-      <!-- <script type="importmap-shim">
-      {
-          "imports": {
-              "xtal-element/": "../node_modules/xtal-element/",
-              "trans-render/": "../node_modules/trans-render/",
-              "purr-sist-idb": "../node_modules/purr-sist/purr-sist-idb.js",
-              "purr-sist-myjson": "../node_modules/purr-sist/purr-sist-myson.js",
-              "xtal-sip": "../node_modules/xtal-sip/xtal-sip.js",
-              "public-choice": "../public-choice.js",
-              "p-d": "../node_modules/p-et-alia/p-d.js",
-              "p-d-x": "../node_modules/p-et-alia/p-d-x.js",
-              "if-diff": "../node_modules/if-diff/if-diff.js",
-              "xtal-radio-group-md": "../node_modules/xtal-material/xtal-radio-group-md.js"
-
-          }
-      }
-      </script> -->
       <script type="importmap-shim">
         {
             "imports": {
@@ -75,8 +58,7 @@
                 "p-et-alia/": "../node_modules/p-et-alia/",
                 "if-diff": "../node_modules/if-diff/if-diff.js",
                 "xtal-radio-group-md": "../node_modules/xtal-radio-group-md/xtal-radio-group-md.js",
-                "google-chart":  "../node_modules/@google-web-components/google-chart/google-chart.js",
-                "xtal-frappe-chart/": "../node_modules/xtal-frappe-chart/",
+                "xtal-frappe-chart": "../node_modules/xtal-frappe-chart/xtal-frappe-chart.js",
                 "frappe-charts/": "../node_modules/frappe-charts/",
                 "@polymer/iron-ajax/": "../node_modules/@polymer/iron-ajax/",
                 "@polymer/polymer/": "../node_modules/@polymer/polymer/",
