--- a/demo/dev.html
+++ b/demo/dev.html
@@ -21,7 +21,7 @@
         </datalist>
       </public-choice-jsonblob>
 
-      <!-- <public-choice-jsonblob guid="0a924568-fcb7-4387-ae85-91a6fa41f788">
+      <public-choice-jsonblob guid="0a924568-fcb7-4387-ae85-91a6fa41f788">
           <span slot="question">Do you approve of this poll?</span>
           <datalist slot="options">
             <option value="Yes"></option>
@@ -29,10 +29,10 @@
             <option value="Maybe"></option>
             
           </datalist>        
-      </public-choice-jsonblob> -->
+      </public-choice-jsonblob>
 
 
-      <!-- <public-choice-jsonblob guid="d1b5f984-9216-4076-8ba1-36ad54edbc06">
+      <public-choice-jsonblob guid="d1b5f984-9216-4076-8ba1-36ad54edbc06">
           <span slot="question">Do you look more like your?</span>
           <datalist slot="options">
             <option value="Mother"></option>
@@ -40,7 +40,7 @@
             <option value="Neither"></option>
             
           </datalist>        
-      </public-choice-jsonblob> -->
+      </public-choice-jsonblob>
       <script type=module src=../public-choice-jsonblob.js></script>
 
     </div>
