--- a/demo/dev.html
+++ b/demo/dev.html
@@ -42,7 +42,7 @@
           </span>
           <datalist slot="options">
             <option value="Unanimity"></option>
-            <option value="No Dicators"></option>
+            <option value="No Dictators"></option>
             <option value="IIA"></option>
           </datalist>        
       </public-choice-jsonblob>
