--- a/demo/dev.html
+++ b/demo/dev.html
@@ -10,7 +10,7 @@
     <div>
       
       <public-choice-jsonblob guid="951c3b69-3e16-4f62-915b-ba3ca33a8e78">
-        <span slot="question">Rational choice theories of politics</span>
+        <span slot="question">Rational choice theories of politics:</span>
         <datalist slot="options">
           <option value="Assumes that individuals are naturally irrational and so should not be given a choice in important political decisions"></option>
           <option value="State that only humans are rational and therefore non-humans are not appropriate subjects of politics"></option>
@@ -18,6 +18,8 @@
           <option value="Assume that voters tend to vote for parties based on the charisma of the party leader"></option>
         </datalist>
       </public-choice-jsonblob>
+
+      <hr>
 
       <public-choice-jsonblob guid="0a924568-fcb7-4387-ae85-91a6fa41f789">
           <span slot="question">'If Option 1 is ranked higher than Option 2, then removing Option 3 should not alter the relative rankings of Options 1 and 2', this is the definition of which property of fairness?</span>
@@ -30,6 +32,7 @@
           </datalist>        
       </public-choice-jsonblob>
 
+      <hr>
 
       <public-choice-jsonblob guid="d1b5f984-9216-4076-8ba1-36ad54edbc07">
           <span slot="question">Three sets of voters pick between three candidates: 
