--- a/demo/dev.html
+++ b/demo/dev.html
@@ -29,7 +29,7 @@
 
       <hr>
 
-      <!-- <public-choice-jsonblob guid="0a924568-fcb7-4387-ae85-91a6fa41f789">
+      <public-choice-jsonblob guid="0a924568-fcb7-4387-ae85-91a6fa41f789">
           <span slot="question">'If Option 1 is ranked higher than Option 2, then removing Option 3 should not alter the relative rankings of Options 1 and 2', this is the definition of which property of fairness?</span>
           <datalist slot="options">
             <option value="IIA"></option>
@@ -38,11 +38,11 @@
             <option value="None of These"></option>
             <option value="All of these could be correct."></option>
           </datalist>        
-      </public-choice-jsonblob> -->
+      </public-choice-jsonblob>
 
       <hr>
 
-      <!-- <public-choice-jsonblob guid="d1b5f984-9216-4076-8ba1-36ad54edbc07">
+      <public-choice-jsonblob guid="d1b5f984-9216-4076-8ba1-36ad54edbc07">
           <span slot="question">Three sets of voters pick between three candidates: 
             <p>30% prefer A to B to C</p>
             <p>40% prefer B to C to A</p>
@@ -56,7 +56,7 @@
             <option value="No Dictators"></option>
             <option value="IIA"></option>
           </datalist>        
-      </public-choice-jsonblob> -->
+      </public-choice-jsonblob>
       <script type=module src=../public-choice-jsonblob.js></script>
 
     </div>
